--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
     <button id="incre-fps">+ FPS</button>
     <button id="incre-speed">+ Speed</button>
     <button id="decre-speed">- Speed</button>
+    <script src="./gameObject.js"></script>
+    <script src="./ball.js"></script>
+    <script src="./brick.js"></script>
     <script src="./index.js"></script>
+
 </body>
 
 </html>
